--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -2,9 +2,19 @@ name: Android CI
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ master ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ master ]
+  workflow_dispatch:
+    inputs:
+      run:
+        description: ""
+        required: true
+        default: run
+        type: choice
+        options:
+          - run
+
 
 jobs:
   build:
