--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -34,6 +34,10 @@ jobs:
           cd Getter
           git submodule init
           git submodule update
-
+      - name: Clone Getter
+        run: |
+          ls
+          cd Getter
+          ls
       - name: Build with Gradle
         run: ./gradlew build
