--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -23,17 +23,14 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+        with:
+          submodules: true
       - name: set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'microsoft'
           cache: gradle
-      - name: Clone Getter
-        run: |
-          cd Getter
-          git submodule init
-          git submodule update
 
       - name: Build with Gradle
         run: |
