--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Getter"]
-	path = Getter
-	url = https://github.com/xiaowine/GetterApi
+[submodule "LyricGetterApi"]
+	path = LyricGetterApi
+	url = https://github.com/xiaowine/LyricGetterApi
