--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -42,33 +42,33 @@ jobs:
       - name: Sign Release APK
         if: success()
         id: sign_release
-        uses: r0adkll/sign-android-release@v1.0.4
+        uses: ilharp/sign-android-release@v1
         with:
-          releaseDirectory: ./app/build/outputs/apk/release
-          signingKeyBase64: ${{ secrets.SIGNING_KEY }}
-          alias: xiao_wine
+          releaseDir: ./app/build/outputs/apk/release
+          signingKey: ${{ secrets.SIGNING_KEY }}
+          keyAlias: xiao_wine
           keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
           keyPassword: ${{ secrets.KEY_STORE_PASSWORD }}
 
       - name: Sign Debug APK
         if: success()
         id: sign_debug
-        uses: r0adkll/sign-android-release@v1.0.4
+        uses: ilharp/sign-android-release@v1
         with:
-          releaseDirectory: ./app/build/outputs/apk/debug
-          signingKeyBase64: ${{ secrets.SIGNING_KEY }}
-          alias: xiao_wine
+          releaseDir: ../app/build/outputs/apk/debug
+          signingKey: ${{ secrets.SIGNING_KEY }}
+          keyAlias: xiao_wine
           keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
           keyPassword: ${{ secrets.KEY_STORE_PASSWORD }}
 
       - name: Sign Release AAB
         if: success()
         id: sign_release_aab
-        uses: r0adkll/sign-android-release@v1.0.4
+        uses: ilharp/sign-android-release@v1
         with:
-          releaseDirectory: ./app/build/outputs/bundle/release/
-          signingKeyBase64: ${{ secrets.SIGNING_KEY }}
-          alias: xiao_wine
+          releaseDir: ./app/build/outputs/bundle/release/
+          signingKey: ${{ secrets.SIGNING_KEY }}
+          keyAlias: xiao_wine
           keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
           keyPassword: ${{ secrets.KEY_STORE_PASSWORD }}
 
@@ -76,19 +76,19 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: StatusBarLyric_release
-          path: ${{ steps.sign_release.outputs.signedReleaseFile }}
+          path: ${{ steps.sign_release.outputs.signedFile }}
 
       - name: Upload Release AAB APK
         uses: actions/upload-artifact@v2
         with:
           name: Lyric Getter aab
-          path: ${{ steps.sign_release_aab.outputs.signedReleaseFile }}
+          path: ${{ steps.sign_release_aab.outputs.signedFile }}
 
       - name: Upload Debug APK
         uses: actions/upload-artifact@v2
         with:
           name: Lyric Getter debug
-          path: ${{ steps.sign_debug.outputs.signedReleaseFile }}
+          path: ${{ steps.sign_debug.outputs.signedFile }}
 
 
 #      - name: Post to channel
@@ -105,5 +105,5 @@ jobs:
 #            ${{ github.event.head_commit.message }}
 #            ```
 #        run: |
-#          ESCAPED=`python3 -c 'import json,os,urllib.parse; print(urllib.parse.quote(json.dumps(os.environ["COMMIT_MESSAGE"])))'`
-#          curl -v "https://api.telegram.org/bot${BOT_TOKEN}/sendMediaGroup?chat_id=${CHANNEL_ID}&media=%5B%7B%22type%22%3A%22document%22%2C%22media%22%3A%22attach%3A%2F%2Frelease%22%7D%2C%7B%22type%22%3A%22document%22%2C%22media%22%3A%22attach%3A%2F%2Fdebug%22%7D%2C%7B%22type%22%3A%22document%22%2C%22media%22%3A%22attach%3A%2F%2Fmapping%22%2C%22parse_mode%22%3A%22MarkdownV2%22%2C%22caption%22%3A${ESCAPED}%7D%5D" -F release="@$RELEASE" -F debug="@$DEBUG" -F mapping="@$MAPPING"
+#  ESCAPED=`python3 -c 'import json,os,urllib.parse; print(urllib.parse.quote(json.dumps(os.environ["COMMIT_MESSAGE"])))'`
+#  curl -v "https://api.telegram.org/bot${BOT_TOKEN}/sendMediaGroup?chat_id=${CHANNEL_ID}&media=%5B%7B%22type%22%3A%22document%22%2C%20%22media%22%3A%22attach%3A%2F%2Frelease%22%7D%2C%7B%22type%22%3A%22document%22%2C%20%22media%22%3A%22attach%3A%2F%2Fdebug%22%2C%22parse_mode%22%3A%22MarkdownV2%22%2C%22caption%22%3A${ESCAPED}%7D%5D" -F release="@$RELEASE" -F debug="@$DEBUG"ment%22%2C%22media%22%3A%22attach%3A%2F%2Frelease%22%7D%2C%7B%22type%22%3A%22document%22%2C%22media%22%3A%22attach%3A%2F%2Fdebug%22%7D%2C%7B%22type%22%3A%22document%22%2C%22media%22%3A%22attach%3A%2F%2Fmapping%22%2C%22parse_mode%22%3A%22MarkdownV2%22%2C%22caption%22%3A${ESCAPED}%7D%5D" -F release="@$RELEASE" -F debug="@$DEBUG" -F mapping="@$MAPPING"
