--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -32,6 +32,11 @@ jobs:
           distribution: 'microsoft'
           cache: gradle
 
+      - name: Build with Gradle
+        run: |
+          ./gradlew assembleRelease
+          ./gradlew assembleDebug
+   
 
       - name: Build with Gradle
         run: |
