修复部分玄学问题

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,8 +5,7 @@
         android:extractNativeLibs="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher"
-        android:testOnly="true" >
+        android:roundIcon="@mipmap/ic_launcher">
 
 <!--        <activity-->
 <!--            android:name=".activity.SettingsActivity"-->
