--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -91,18 +91,18 @@ jobs:
           path: ${{ steps.sign_debug.outputs.signedReleaseFile }}
 
 
-#      - name: Post to channel
-#        if: contains(github.event.head_commit.message, '[skip post]') == false
-#        env:
-#          CHANNEL_ID: ${{ secrets.CHANNEL_DEV_ID }}
-#          BOT_TOKEN: ${{ secrets.BOT_DEV_TOKEN }}
-#          RELEASE: ${{ steps.sign_release.outputs.signedReleaseFile }}
-#          DEBUG: ${{ steps.sign_debug.outputs.signedReleaseFile }}
-#          COMMIT_MESSAGE: |+
-#            Github CI
-#            ```
-#            ${{ github.event.head_commit.message }}
-#            ```
-#        run: |
-#  ESCAPED=`python3 -c 'import json,os,urllib.parse; print(urllib.parse.quote(json.dumps(os.environ["COMMIT_MESSAGE"])))'`
-#  curl -v "https://api.telegram.org/bot${BOT_TOKEN}/sendMediaGroup?chat_id=${CHANNEL_ID}&media=%5B%7B%22type%22%3A%22document%22%2C%20%22media%22%3A%22attach%3A%2F%2Frelease%22%7D%2C%7B%22type%22%3A%22document%22%2C%20%22media%22%3A%22attach%3A%2F%2Fdebug%22%2C%22parse_mode%22%3A%22MarkdownV2%22%2C%22caption%22%3A${ESCAPED}%7D%5D" -F release="@$RELEASE" -F debug="@$DEBUG"
+      - name: Post to channel
+        if: contains(github.event.head_commit.message, '[skip post]') == false
+        env:
+          CHANNEL_ID: ${{ secrets.CHANNEL_DEV_ID }}
+          BOT_TOKEN: ${{ secrets.BOT_DEV_TOKEN }}
+          RELEASE: ${{ steps.sign_release.outputs.signedReleaseFile }}
+          DEBUG: ${{ steps.sign_debug.outputs.signedReleaseFile }}
+          COMMIT_MESSAGE: |+
+            Github CI
+            ```
+            ${{ github.event.head_commit.message }}
+            ```
+        run: |
+            ESCAPED=`python3 -c 'import json,os,urllib.parse; print(urllib.parse.quote(json.dumps(os.environ["COMMIT_MESSAGE"])))'`
+            curl -v "https://api.telegram.org/bot${BOT_TOKEN}/sendMediaGroup?chat_id=${CHANNEL_ID}&media=%5B%7B%22type%22%3A%22document%22%2C%20%22media%22%3A%22attach%3A%2F%2Frelease%22%7D%2C%7B%22type%22%3A%22document%22%2C%20%22media%22%3A%22attach%3A%2F%2Fdebug%22%2C%22parse_mode%22%3A%22MarkdownV2%22%2C%22caption%22%3A${ESCAPED}%7D%5D" -F release="@$RELEASE" -F debug="@$DEBUG"
