--- a/gradle.properties
+++ b/gradle.properties
@@ -19,4 +19,5 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
-android.defaults.buildfeatures.buildconfig=true
+android.experimental.enableNewResourceShrinker.preciseShrinking=true
+android.enableAppCompileTimeRClass=true
