--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,4 @@ android.enableJetifier=true
 kotlin.code.style=official
 android.experimental.enableNewResourceShrinker.preciseShrinking=true
 android.enableAppCompileTimeRClass=true
+android.defaults.buildfeatures.buildconfig=true
