--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,6 +8,7 @@ constraintlayout = "2.1.4"
 navigation-fragment-ktx = "2.6.0"
 navigation-ui-ktx = "2.6.0"
 rikkax-borderview = "1.1.0"
+rikkax-mainswitchbar = "1.0.2"
 rikkax-material-preference = "2.0.0"
 preference = "1.2.1"
 ezXHelper = "2.0.6"
@@ -21,6 +22,7 @@ constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayo
 navigation-fragment-ktx = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "navigation-fragment-ktx" }
 navigation-ui-ktx = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigation-ui-ktx" }
 rikkax-widget-borderview = { group = "dev.rikka.rikkax.widget", name = "borderview", version.ref = "rikkax-borderview" }
+rikkax-widget-mainswitchbar = { group = "dev.rikka.rikkax.widget", name = "mainswitchbar", version.ref = "rikkax-mainswitchbar" }
 rikkax-material-preference = { group = "dev.rikka.rikkax.material", name = "material-preference", version.ref = "rikkax-material-preference" }
 preference = { group = "androidx.preference", name = "preference", version.ref = "preference" }
 ezXHelper = { group = "com.github.kyuubiran", name = "EzXHelper", version.ref = "ezXHelper" }
