--- a/app/src/main/assets/app_rules.json
+++ b/app/src/main/assets/app_rules.json
@@ -5,9 +5,24 @@
       "rules": [
         {
           "startVersionCode": 2023071601,
-          "endVersionCode": 9223372036854775807,
+          "endVersionCode": 2147483647,
+          "excludeVersions": [],
           "apiVersion": 4,
           "useApi": true,
+          "getLyricType": 0,
+          "remarks": ""
+        }
+      ]
+    },
+    {
+      "packName": "com.xuncorp.suvine.music",
+      "rules": [
+        {
+          "startVersionCode": 0,
+          "endVersionCode": 0,
+          "excludeVersions": [],
+          "apiVersion": 0,
+          "useApi": false,
           "getLyricType": 0,
           "remarks": ""
         }
@@ -18,7 +33,8 @@
       "rules": [
         {
           "startVersionCode": 2023071601,
-          "endVersionCode": 9223372036854775807,
+          "endVersionCode": 2147483647,
+          "excludeVersions": [],
           "apiVersion": 4,
           "useApi": true,
           "getLyricType": 0,
@@ -31,7 +47,8 @@
       "rules": [
         {
           "startVersionCode": 15900,
-          "endVersionCode": 9223372036854775807,
+          "endVersionCode": 2147483647,
+          "excludeVersions": [],
           "apiVersion": 0,
           "useApi": false,
           "getLyricType": 0,
@@ -45,6 +62,7 @@
         {
           "startVersionCode": 1266,
           "endVersionCode": 1287,
+          "excludeVersions": [],
           "apiVersion": 0,
           "useApi": false,
           "getLyricType": 3,
@@ -57,7 +75,8 @@
       "rules": [
         {
           "startVersionCode": 0,
-          "endVersionCode": 9223372036854775807,
+          "endVersionCode": 2147483647,
+          "excludeVersions": [],
           "apiVersion": 0,
           "useApi": false,
           "getLyricType": 1,
@@ -70,7 +89,8 @@
       "rules": [
         {
           "startVersionCode": 10545,
-          "endVersionCode": 9223372036854775807,
+          "endVersionCode": 2147483647,
+          "excludeVersions": [],
           "apiVersion": 0,
           "useApi": false,
           "getLyricType": 1,
@@ -82,8 +102,9 @@
       "packName": "com.tencent.qqmusic",
       "rules": [
         {
-          "startVersionCode": 0,
-          "endVersionCode": 9223372036854775807,
+          "startVersionCode": 1108,
+          "endVersionCode": 2147483647,
+          "excludeVersions": [],
           "apiVersion": 0,
           "useApi": false,
           "getLyricType": 0,
@@ -96,7 +117,8 @@
       "rules": [
         {
           "startVersionCode": 0,
-          "endVersionCode": 9223372036854775807,
+          "endVersionCode": 2147483647,
+          "excludeVersions": [],
           "apiVersion": 0,
           "useApi": false,
           "getLyricType": 1,
@@ -110,6 +132,7 @@
         {
           "startVersionCode": 7002022,
           "endVersionCode": 8000041,
+          "excludeVersions": [],
           "apiVersion": 0,
           "useApi": false,
           "getLyricType": 1,
@@ -117,9 +140,10 @@
         },
         {
           "startVersionCode": 8000041,
-          "endVersionCode": 9223372036854775807,
+          "endVersionCode": 2147483647,
+          "excludeVersions": [],
           "apiVersion": 0,
-          "useApi": false,
+          "useApi": true,
           "getLyricType": 0,
           "remarks": ""
         }
@@ -130,7 +154,8 @@
       "rules": [
         {
           "startVersionCode": 0,
-          "endVersionCode": 9223372036854775807,
+          "endVersionCode": 2147483647,
+          "excludeVersions": [],
           "apiVersion": 0,
           "useApi": false,
           "getLyricType": 1,
@@ -143,7 +168,8 @@
       "rules": [
         {
           "startVersionCode": 0,
-          "endVersionCode": 9223372036854775807,
+          "endVersionCode": 2147483647,
+          "excludeVersions": [],
           "apiVersion": 0,
           "useApi": false,
           "getLyricType": 1,
@@ -156,7 +182,8 @@
       "rules": [
         {
           "startVersionCode": 0,
-          "endVersionCode": 9223372036854775807,
+          "endVersionCode": 2147483647,
+          "excludeVersions": [],
           "apiVersion": 0,
           "useApi": false,
           "getLyricType": 1,
@@ -169,7 +196,8 @@
       "rules": [
         {
           "startVersionCode": 0,
-          "endVersionCode": 9223372036854775807,
+          "endVersionCode": 2147483647,
+          "excludeVersions": [],
           "apiVersion": 0,
           "useApi": false,
           "getLyricType": 1,
@@ -182,7 +210,8 @@
       "rules": [
         {
           "startVersionCode": 0,
-          "endVersionCode": 9223372036854775807,
+          "endVersionCode": 2147483647,
+          "excludeVersions": [],
           "apiVersion": 0,
           "useApi": false,
           "getLyricType": 2,
@@ -195,10 +224,39 @@
       "rules": [
         {
           "startVersionCode": 0,
-          "endVersionCode": 9223372036854775807,
+          "endVersionCode": 2147483647,
+          "excludeVersions": [],
           "apiVersion": 0,
           "useApi": false,
           "getLyricType": 1,
+          "remarks": ""
+        }
+      ]
+    },
+    {
+      "packName": "player.phonograph.plus",
+      "rules": [
+        {
+          "startVersionCode": 611,
+          "endVersionCode": 2147483647,
+          "excludeVersions": [],
+          "apiVersion": 4,
+          "useApi": true,
+          "getLyricType": 0,
+          "remarks": ""
+        }
+      ]
+    },
+    {
+      "packName": "com.caij.puremusic",
+      "rules": [
+        {
+          "startVersionCode": 1020202,
+          "endVersionCode": 2147483647,
+          "excludeVersions": [],
+          "apiVersion": 4,
+          "useApi": true,
+          "getLyricType": 0,
           "remarks": ""
         }
       ]
