--- a/app_rules.json
+++ b/app_rules.json
@@ -143,7 +143,7 @@
           "endVersionCode": 2147483647,
           "excludeVersions": [],
           "apiVersion": 0,
-          "useApi": true,
+          "useApi": false,
           "getLyricType": 0,
           "remarks": ""
         }
@@ -262,6 +262,6 @@
       ]
     }
   ],
-  "appRulesVersion": 2,
+  "appRulesVersion": 1,
   "version": 1
 }
