--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -43,10 +43,10 @@ jobs:
 
       - name: Build with Gradle
         run: |
-          mkdir ./doc
+          mkdir -p ./doc
           echo "$(echo `(cat ./app/src/main/assets/app_rules.json)` | grep -o '"appRulesVersion": [0-9]*' | grep -o '[0-9]*')" > ./doc/app_rules_version
           cp ./app/src/main/assets/app_rules.json ./doc/app_rules.json
-          cgradlew assemble
+          ./gradlew assemble
           ./gradlew bundleRelease
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
