优化规则查看

--- a/app/src/main/assets/app_rules.json
+++ b/app/src/main/assets/app_rules.json
@@ -40,7 +40,9 @@
         {
           "startVersionCode": 2023081001,
           "endVersionCode": 2147483647,
-          "excludeVersions": [],
+          "excludeVersions": [
+            2023082301
+          ],
           "apiVersion": 5,
           "useApi": true,
           "getLyricType": 0,
