--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,7 +15,7 @@ swiperefreshlayout = { module = "androidx.swiperefreshlayout:swiperefreshlayout"
 xposed = { module = "de.robv.android.xposed:api", version = "82" }
 ezXHelper = { module = "com.github.kyuubiran:EzXHelper", version = "2.0.7" }
 dexkit = { module = "org.luckypray:DexKit", version = "1.1.8" }
-lyricGetter-api = { module = "com.github.xiaowine:Lyric-Getter-Api", version = "5.0.5" }
+lyricGetter-api = { module = "com.github.xiaowine:Lyric-Getter-Api", version = "5fd23a95e9" }
 xkt = { module = "com.github.xiaowine:XKT", version = "1.0.12" }
 dsp = { module = "com.github.xiaowine:dsp", version = "1.1.3" }
 gson = { module = "com.google.code.gson:gson", version = "2.10.1" }
