--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,24 +1,24 @@
 [versions]
 agp = "8.1.2"
-kotlin = "1.9.0"
+kotlin = "1.9.10"
 
 [libraries]
 core-ktx = { module = "androidx.core:core-ktx", version = "1.12.0" }
 material = { module = "com.google.android.material:material", version = "1.10.0" }
 modernandroidpreferences = { module = "de.maxr1998:modernandroidpreferences", version = "2.3.2" }
-constraintlayout = { module = "androidx.constraintlayout:constraintlayout", version = "2.1.4" }
-navigation-ui-ktx = { module = "androidx.navigation:navigation-ui-ktx", version = "2.7.4" }
-navigation-fragment-ktx = { module = "androidx.navigation:navigation-fragment-ktx", version = "2.7.4" }
+navigation-ui-ktx = { module = "androidx.navigation:navigation-ui-ktx", version = "2.7.5" }
+navigation-fragment-ktx = { module = "androidx.navigation:navigation-fragment-ktx", version = "2.7.5" }
 lifecycle-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version = "2.6.2" }
 swiperefreshlayout = { module = "androidx.swiperefreshlayout:swiperefreshlayout", version= "1.2.0-alpha01" }
 
 xposed = { module = "de.robv.android.xposed:api", version = "82" }
 ezXHelper = { module = "com.github.kyuubiran:EzXHelper", version = "2.0.7" }
 dexkit = { module = "org.luckypray:DexKit", version = "1.1.8" }
-lyricGetter-api = { module = "com.github.xiaowine:Lyric-Getter-Api", version = "5fd23a95e9" }
+lyricGetter-api = { module = "com.github.xiaowine:Lyric-Getter-Api", version = "a6e386cd21" }
 xkt = { module = "com.github.xiaowine:XKT", version = "1.0.12" }
 dsp = { module = "com.github.xiaowine:dsp", version = "1.1.3" }
 gson = { module = "com.google.code.gson:gson", version = "2.10.1" }
+cardSlider = { module = "com.github.IslamKhSh:CardSlider", version = "1.0.1" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
