--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,9 +12,9 @@ lifecycle-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx
 swiperefreshlayout = { module = "androidx.swiperefreshlayout:swiperefreshlayout", version= "1.2.0-alpha01" }
 
 xposed = { module = "de.robv.android.xposed:api", version = "82" }
-ezXHelper = { module = "com.github.kyuubiran:EzXHelper", version = "2.0.7" }
+ezXHelper = { module = "com.github.kyuubiran:EzXHelper", version = "2.0.8" }
 dexkit = { module = "org.luckypray:DexKit", version = "1.1.8" }
-lyricGetter-api = { module = "com.github.xiaowine:Lyric-Getter-Api", version = "a6e386cd21" }
+lyricGetter-api = { module = "com.github.xiaowine:Lyric-Getter-Api", version = "6.0.0dev" }
 xkt = { module = "com.github.xiaowine:XKT", version = "1.0.12" }
 dsp = { module = "com.github.xiaowine:dsp", version = "1.1.3" }
 gson = { module = "com.google.code.gson:gson", version = "2.10.1" }
