--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
-agp = "8.1.2"
-kotlin = "1.9.10"
+agp = "8.1.3"
+kotlin = "1.9.20"
 
 [libraries]
 core-ktx = { module = "androidx.core:core-ktx", version = "1.12.0" }
@@ -14,7 +14,7 @@ swiperefreshlayout = { module = "androidx.swiperefreshlayout:swiperefreshlayout"
 xposed = { module = "de.robv.android.xposed:api", version = "82" }
 ezXHelper = { module = "com.github.kyuubiran:EzXHelper", version = "2.0.8" }
 dexkit = { module = "org.luckypray:DexKit", version = "1.1.8" }
-lyricGetter-api = { module = "com.github.xiaowine:Lyric-Getter-Api", version = "6.0.0dev" }
+lyricGetter-api = { module = "com.github.xiaowine:Lyric-Getter-Api", version = "6.0.0" }
 xkt = { module = "com.github.xiaowine:XKT", version = "1.0.12" }
 dsp = { module = "com.github.xiaowine:dsp", version = "1.1.3" }
 gson = { module = "com.google.code.gson:gson", version = "2.10.1" }
